# bpmn-robots-architecture-emulator

./: .gitignore  README.md
architecture_emulator/: CMakeLists.txt  package.xml
behavior_listener_emulator/: CMakeLists.txt  package.xml
behavior_listener_emulator/launch/: behavior_listener_emulator.launch
behavior_listener_emulator/src/: behavior_listener_emulator_node.cpp
empty_behavior_manager/: CMakeLists.txt  package.xml
empty_behavior_manager/config/: empty_behavior_manager.json  template.json
empty_behavior_manager/include/empty_behavior_manager/: empty_behavior_manager.hpp
empty_behavior_manager/launch/: empty_behavior_manager.launch
empty_behavior_manager/src/: empty_behavior_manager.cpp  empty_behavior_manager_node.cpp
machine_pool_emulator/: CMakeLists.txt  package.xml
machine_pool_emulator/launch/: machine_pool_emulator.launch
machine_pool_emulator/src/: machine_pool_emulator.cpp
master_thread_pool_emulator/: CMakeLists.txt  package.xml
master_thread_pool_emulator/launch/: master_thread_pool_emulator.launch
master_thread_pool_emulator/src/: master_thread_pool_emulator.cpp
node_server_emulator/: CMakeLists.txt  package.xml
node_server_emulator/src/: node_server_emulator.cpp
resource_manager_emulator/: CMakeLists.txt  package.xml
resource_manager_emulator/launch/: resource_manager_emulator.launch
resource_manager_emulator/src/: resource_manager_emulator_node.cpp
setup_launch/: CMakeLists.txt  package.xml
setup_launch/launch/: full_emulator.launch  real_master_thread_pool.launch
