<?xml version="1.0"?>
<package format="2">
  <name>behavior_listener_emulator</name>
  <version>0.0.0</version>
  <description>The behavior_listener_emulator package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>architecture_msgs</depend>

  <export></export>
</package>
