<?xml version="1.0"?>
<package format="2">
  <name>machine_pool_emulator</name>
  <version>0.0.0</version>
  <description>The machine_pool_emulator package</description>
  <maintainer email="ryanjacobson@todo.todo">ryanjacobson</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>architecture_msgs</depend>
  <export></export>
</package>
