<?xml version="1.0"?>
<package format="2">
  <name>setup_launch</name>
  <version>0.0.0</version>
  <description>The setup_launch package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
